// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericPage renders a sidebar menu and a collapsible menu with desktop/mobile utility classes 1`] = `
<Layout
  className="page-container"
>
  <Div
    className="page-container-inner"
  >
    <Div
      className="d-flex d-md-none"
    >
      <MenuBar
        isMobile={true}
      />
    </Div>
    <Content>
      <Layout>
        <Div
          className="d-none d-md-flex"
        >
          <PageSidebar />
        </Div>
        <Content
          className="page-content"
          style={
            Object {
              "overflowX": "visible",
            }
          }
        >
          <PageHeader
            backIcon={
              <Icon
                type="arrow-left"
              />
            }
            ghost={false}
            subTitle="subTitle"
            title="title"
          />
          <Layout
            className="content"
          >
            <Content>
              <Div
                className="test-children"
              />
            </Content>
            <Footer>
              <PageFooter />
              <TransparentText />
            </Footer>
          </Layout>
        </Content>
      </Layout>
    </Content>
  </Div>
</Layout>
`;

exports[`GenericPage renders no menu or PageHeader when hideMenu is true 1`] = `
<Layout
  className="page-container"
>
  <Div
    className="page-container-inner"
  >
    <Content>
      <Layout>
        <Content
          className="page-content"
          style={
            Object {
              "overflowX": "visible",
            }
          }
        >
          <Layout
            className="content"
          >
            <Content>
              <Div
                className="test-children"
              />
            </Content>
            <Footer>
              <PageFooter />
              <TransparentText />
            </Footer>
          </Layout>
        </Content>
      </Layout>
    </Content>
  </Div>
</Layout>
`;
